--- a/templates/easydoctor/dashboard.html
+++ b/templates/easydoctor/dashboard.html
@@ -30,7 +30,7 @@
         
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">
-            <i class="glyphicon glyphicon-user"></i> {{ request.session.displayName }} <span class="caret"></span></a>
+            <i class="glyphicon glyphicon-user"></i> {{ request.session.firstName }} <span class="caret"></span></a>
           <ul id="g-account-menu" class="dropdown-menu" role="menu">
             <li><a href="#">My Profile</a></li>
             <li><a href="../logout/"><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
