Login dashboard syncronization.

--- a/templates/easydoctor/doctorDashboard.html
+++ b/templates/easydoctor/doctorDashboard.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-		<title>Bootstrap 3 Control Panel</title>
+		<title>Easydoctor</title>
 		<meta name="generator" content="Bootply" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<!--[if lt IE 9]>
@@ -23,7 +23,7 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon-toggle"></span>
       </button>
-      <a class="navbar-brand" href="#">Control Panel</a>
+      <a class="navbar-brand" href="#">Easydoctor</a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -49,7 +49,7 @@
   <div class="row">
 	<div class="col-sm-3">
       <!-- left -->
-      <h3><i class="glyphicon glyphicon-briefcase"></i> Toolbox</h3>
+      <h3><i class="glyphicon glyphicon-briefcase"></i> Doctor Control Panel</h3>
       <hr>
       
       <ul class="nav nav-stacked">
